[package]
name = "chanman"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { "version" = "0.6.2", features = ["trace"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
rayon = "1.10.0"
futures-util = { version = "0.3.30", features = ["sink"] }
uuid = { version = "1.16", features = ["v4"] }
